Update backend config: support SPRING_DATASOURCE_URL/USER/PASS env, handle CORS origin pattern wildcards, and align AI service URL fallbacks